--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -606,6 +606,15 @@ input, select, textarea {
 		position: relative;
 	}
 
+	.icon img {
+		width: 200px;           /* Or 60px, depending on your layout */
+ 		height: 200px;
+  		border-radius: 50%;    /* Makes it circular */
+  		object-fit: cover;     /* Keeps face centered */
+  		vertical-align: middle;
+	}
+	  
+
 		.icon:before {
 			-moz-osx-font-smoothing: grayscale;
 			-webkit-font-smoothing: antialiased;
@@ -1140,9 +1149,12 @@ input, select, textarea {
 			-ms-transition-delay: 0.75s;
 			transition-delay: 0.75s;
 			background-image: linear-gradient(to top, rgba(19, 21, 25, 0.5), rgba(19, 21, 25, 0.5)), url("../../images/overlay.png");
-			background-size: auto, 256px 256px;
-			background-position: center, center;
-			background-repeat: no-repeat, repeat;
+			background-size: auto,
+ 256px 256px;
+			background-position: center,
+ center;
+			background-repeat: no-repeat,
+ repeat;
 			z-index: 2;
 		}
 
@@ -1287,12 +1299,20 @@ input, select, textarea {
 				display: none;
 			}
 
-		#header .logo {
+		/* #header .logo {
 			width: 5.5rem;
 			height: 5.5rem;
 			line-height: 5.5rem;
 			border: solid 1px #ffffff;
 			border-radius: 100%;
+		} */
+
+		#header .logo{
+			width: 200px;
+    		height: 200px;
+    		border-radius: 100%;
+    		object-fit: cover;
+    		vertical-align: middle;
 		}
 
 			#header .logo .icon:before {
