--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1640,6 +1640,66 @@ input, select, textarea {
 
 		}
 
+/* project */
+
+	 .project-body{
+		font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+		/* background: #f9f9f9; */
+		color: #333;
+		line-height: 1.6;
+		padding: 2rem;
+	}
+
+	.project-body strong, b {
+		color: #e30707;
+		font-weight: 600;
+	}
+
+	.projects {
+		max-width: 900px;
+		margin: auto;
+  	}
+  
+  	.projects h2 {
+		font-size: 2rem;
+		margin-bottom: 1.5rem;
+		color: #fff;
+  	}
+  
+  	.project {
+		background: #fff;
+		padding: 1.5rem;
+		margin-bottom: 2rem;
+		border-left: 5px solid #007bff;
+		box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+		border-radius: 8px;
+  	}
+  
+  	.project h3 {
+		font-size: 1.5rem;
+		color: #007bff;
+		margin-bottom: 0.5rem;
+  	}
+  
+  	.project p {
+		margin: 0.2rem 0;
+  	}
+  
+  	.project ul {
+		margin-top: 0.5rem;
+		padding-left: 1.2rem;
+  	}
+  
+  	.project ul li {
+		margin-bottom: 0.5rem;
+  	}
+  
+  	i {
+		margin-right: 8px;
+		color: #007bff;
+  	}
+  
+
 /* Footer */
 
 	#footer {
